--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "punch.js",
   "dependencies": {
     "express": "^4.12.3",
-    "livescript": "^0.0.1",
-    "prelude-ls": "^1.1.1"
+    "jest": "^29.3.1",
+    "prelude-ls": "^1.1.1",
+    "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
+    "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --env=node --colors --coverage test",
     "build": "tsc"
   },
   "repository": {
